Squashed commit of the following:
commit ea0438f4f00804bcf2def8939061d5b13f5229a4
Author: Vivy <matthijs.booman@hotmail.com>
Date:   Tue Jul 18 12:32:06 2023 +0200

    Migrate frontend directives to components (#5134)

commit 119ef142b1cbb15dacdc48dbb5b3a6b0d9eac29d
Author: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>
Date:   Tue Jul 18 12:31:40 2023 +0200

    Bump cxf.version from 3.5.5 to 3.5.6 (#5133)

commit 5a9bb1a82173c19dde941e1d0053c5fbea46f649
Author: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>
Date:   Tue Jul 18 12:30:38 2023 +0200

    Bump liquibase-core from 4.21.1 to 4.23.0 (#5052)

    Bumps [liquibase-core](https://github.com/liquibase/liquibase) from 4.21.1 to 4.23.0.
    - [Release notes](https://github.com/liquibase/liquibase/releases)
    - [Changelog](https://github.com/liquibase/liquibase/blob/master/changelog.txt)
    - [Commits](https://github.com/liquibase/liquibase/compare/v4.21.1...v4.23.0)

commit 15d20774d183b6d30bba45246a7b0f3c8f6be043
Author: Niels <nielsmeijer@hotmail.com>
Date:   Sun Jul 16 19:53:55 2023 +0200

    Fix Json2XmlValidator response type parsing (#5126)

commit b8967fba5a762a092f0b16665854b5fc99fb6cdf
Author: Niels <nielsmeijer@hotmail.com>
Date:   Sun Jul 16 19:53:19 2023 +0200

    Rename IsXmlIfPipe to IsXmlPipe (#5128)

commit f83df580b006d40ae1985dfae7852b67776c7741
Author: Niels <nielsmeijer@hotmail.com>
Date:   Sun Jul 16 19:53:09 2023 +0200

    Update SMBJ (#5129)

commit 1f0a73d3d2de69fa60cd6bd0cef95e9e3829544e
Author: Tim van der Leeuw <tnleeuw@gmail.com>
Date:   Sun Jul 16 19:51:57 2023 +0200

    Add tests for closing streams at end of CompressPipe (#5131)

    Test updates for issue #5104

commit 2b1d5b35243d2f790d4a707b1287393d2244df9d
Author: Niels <nielsmeijer@hotmail.com>
Date:   Fri Jul 14 13:57:38 2023 +0200

    Fix Samba FileSystems (#5093)

commit 259430d34d948b48a575b5aa340016f65b8bc050
Author: Laurens Mäkel <37303445+Laurens-makel@users.noreply.git